# symbolic-differentiation

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  justfile  main.cpp
include/: ir.h  operations.h  parser.h  runner.h
src/: CMakeLists.txt  ir.cpp  operation.cpp  parser.cpp  runner.cpp
test/: CMakeLists.txt  parser_test.cpp
